init.d.cfg > Fixed setrenice default value, enabled zipalign+sqlite3+speedy+setrenice per default

--- a/prebuilt/common/etc/init.d.cfg
+++ b/prebuilt/common/etc/init.d.cfg
@@ -19,7 +19,7 @@
 script_helpers=/system/etc/helpers.sh
 
 # booleans
-zipalign_apks=false
+zipalign_apks=true
 fix_permissions=false
 enable_sysctl=false
 free_mem=false
@@ -27,18 +27,18 @@ clear_data_cache=false
 enable_cron=false
 sd_boost=false
 file_system_speedups=false
-battery=false
+battery=true
 touch=false
 minfree=false
 gpurender=false
 sleepers=false
 journalism=false
-sqlite3=false
+sqlite3=true
 wifisleep=false
 iostats=false
-sentrenice=false
+setrenice=true
 tweaks=false
-speedy_modified=false
+speedy_modified=true
 loopy_smoothness_tweak=false
 
 # files
